simple request from nghttp client works now, but for some reason the HTTP2-Settings isn't getting parsed right.